k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-games
  labels:
    app: k8s-games
spec:
  type: ClusterIP
  selector:
    app: k8s-games
  ports:
    - name: http
      port: 80
      targetPort: 80
